<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MovieDetailActivity">

    <ImageView
        android:id="@+id/d_poster_iv"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/poster_content"
        android:scaleType="centerCrop" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="15sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_marginTop="15sp"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_marginTop="15sp"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/release_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vote_avg"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_marginTop="15sp"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/vote_avg_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plot"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_marginTop="15sp"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/plot_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"/>


        </LinearLayout>

    </ScrollView>


</LinearLayout>